# sandbox

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README  SampleApp  cmake_install.cmake
MacOS/: SampleApp  plugins.cfg
Resources/: resources.cfg
SampleApp.app/: media
SampleApp.app/Contents/: Info.plist  Plugins
SampleApp.app/Contents/Components/: libOgrePaging.dylib  libOgreProperty.dylib  libOgreRTShaderSystem.dylib  libOgreTerrain.dylib
SampleApp.app/Contents/Frameworks/: Cg.framework  Ogre.framework
cmake/modules/: FindOGRE.cmake
src/: SampleApp.cpp
